Changes to Dataset and PSSMatrix
- added possibility to compute only a certain number of lines when parsing a dataset
- added finetuning of pssmatrix threshold

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -5,5 +5,11 @@ Dataset.o: Dataset.cpp
 PSSMatrix.o: PSSMatrix.cpp
 	g++ -c PSSMatrix.cpp
 
+SVMModel.o: SVMModel.cpp
+	g++ -c SVMModel.cpp
+
 test: test.cpp Dataset.o PSSMatrix.o
-	g++ test.cpp Dataset.o PSSMatrix.o -o test
+	g++ test.cpp Dataset.o PSSMatrix.o SVMModel.o svm.cpp -o test
+
+clear:
+	rm -f test.exe
